--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,6 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -27,12 +19,11 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: blue;
+  background-color: #BDBBB6;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
+  min-width: 100px;
+  max-width: 150px;
 }
 button:focus,
 button:focus-visible {
@@ -47,10 +38,14 @@ ul {
 }
 
 nav {
-  display: flex;
   gap: 20px;
-  align-items: center;
-  margin: 20px 0;
+  justify-content: center;
+  margin: 20px 40px;
+}
+
+#nav-container {
+  display: flex;
+  justify-content: space-between;
 }
 
 nav label {
@@ -107,4 +102,44 @@ img {
 
 .ingredients {
     text-align: left;
+}
+
+#login-top-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.recipe-container, .memory-container, .login-container {
+  display: flex;
+  justify-content: center;
+}
+
+#add-recipe-form, #add-memory-form, .login-form {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid transparent;
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  padding: 30px;
+  width: 75%;
+  gap: 10px;
+}
+
+#registration {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  gap: 10px;
+}
+
+input, select, textarea {
+  min-height: 25px;
+  border: 1px solid transparent;
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+}
+
+#checkbox {
+  min-height: 0;
 }
