--- a/src/App.css
+++ b/src/App.css
@@ -70,57 +70,25 @@ img {
   border-radius: 15px;
 }
 
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: start;
-    gap: 25px;
-}
-
-.recipe-head {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.recipe-head h1 {
-    padding-left: 40px;
-}
-
-.recipe-full {
-    display: flex;
-    flex-direction: column;
-}
-
-.recipe-full img {
-    max-width: 350px;
-    height: 100%;
-}
-
-.recipe-body {
-    margin: 5px 20px 0 390px;
-    max-width: 60%;
-}
-
-.recipe-head button {
-    margin-left: 20px;
-}
-
-.ingredients {
-    text-align: left;
-}
-
 #login-top-container {
   display: flex;
   flex-direction: column;
 }
 
-.recipe-container, .memory-container, .login-container {
+.recipe-container, .memory-container, .login-container, .container {
   display: flex;
   justify-content: center;
 }
 
-#add-recipe-form, #add-memory-form, .login-form {
+#recipe-buttons, #memory-buttons {
+  display: flex;
+  justify-content: start;
+  width: 75%;
+  gap: 10px;
+  margin-bottom: 15px;
+}
+
+#add-recipe-form, #add-memory-form, .login-form, .recipe-full, .memory-full  {
   display: flex;
   flex-direction: column;
   border: 1px solid transparent;
@@ -129,6 +97,18 @@ img {
   padding: 30px;
   width: 75%;
   gap: 10px;
+}
+
+.recipe-full, .memory-full {
+  background-color: #e6e4de;
+}
+
+.recipe-body, .memory-body h2 {
+  margin-bottom: 10px;
+}
+
+.recipe-body, .memory-body h3 {
+  margin: 15px 0;
 }
 
 #registration {
